syntax = "proto3";

package auth_service.proto;

option go_package = "pos/auth_service/pb";

import "auth.proto";

service AuthService {
    rpc ValidateToken(validateTokenRequest) returns (validateTokenResponse);
}